# NAM-Rig

./: .gitignore  CMakeLists.txt  GIT_SAFETY.md  IR_LICENSING_RESEARCH.md  README.md  spring_tuner.html
delay_analysis/: CONTROLLED_PROBE_METHOD.md  DELAY_CHARACTER_PLAYBOOK.md  DELAY_CHARACTER_SESSION_BRIEF.md  SPACE_TAPE_TIMING_PROMPT.md  SPACE_TAPE_VOICING_BRIEF.md  TAPE_ECHO_REVOICE_PROMPT.md  delay_battery.py  delay_demo.cpp  delay_fit.py  delay_fit_staged.py  delay_null.cpp  delay_render.cpp  gen_dry_probes.py  null_probe.py
docs/: PLATE_PHASE2.md  PLATE_PHASE2B.md  REVERB_REBUILD_HANDOFF.md
docs/drive/: NEXT_SESSION_HANDOFF.md  README.md  big-muff.md  big_muff_response.py  bluesbreaker.md  bluesbreaker_response.py  building-drives-playbook.md  circuit-accuracy.md  current-driveblock.md  ep3.md  ep3_response.py  fuzz-face.md  fuzz_face_response.py  klon.md  klon_response.py  option-a-design.md  overdrive-family.md  proco-rat.md  proco_rat_response.py  rangemaster.md  rangemaster_response.py  sd1.md  sd1_response.py  ts808_response.py  tube-screamer-circuit.md
plate_onset_release/: PLATE_ONSET_IMPLEMENTATION.md
plate_proto/: IR_MATCHING_PLAYBOOK.md  M_rand2_32.txt  README.md  RESULTS.md  RESULTS_V2.md  REVERB_CAPTURE_DESIGN.md  REVERB_ENGINE_V2_DESIGN.md  capture.py  capture_v2.py  decay_targets.txt  decayfit.py  density_exp.py  design_damp.py  drive.py  edr_plot.py  edrfit.py  err.txt  fdnplate  fdnplate.cpp  fdnplate10.cpp  fdnplate11.cpp  fdnplate2  fdnplate2.cpp  fdnplate3.cpp  fdnplate4.cpp  fdnplate5.cpp  fdnplate6.cpp  fdnplate7.cpp  fdnplate8.cpp  fdnplate9.cpp  fit_env.txt  fit_gunit.txt  fit_matrix.txt  fit_qvec.txt  flamo_fit.py  flat.py  generalize_test.py  geq_export.py  geq_final.txt  geq_ls.py  (+11 more)
reverb_analysis/: IR_MATCHING_PLAYBOOK.md  METRICS.md  PLATE_HANDOFF.md  PLATE_MODAL_POCKET_PROTO.md  README.md  RESULTS_plate.md  RESULTS_spring.md  REVERB_CHARACTER_PLAYBOOK.md  ROOM_SHIP_HANDOFF.md  abx_decomp.py  add_cloud.py  cloud_fit.py  compare_hyb_ref.py  compare_metrics.py  damp_fit.py  damp_fit2.py  damp_verify.py  disp_fig.py  edr_compare.py  edr_final.py  edr_hybrid.py  edr_update.py  finalists.py  fit.py  full_measure.py  hybrid_swap.py  kernel_composite.py  knob_short.py  knob_taper.py  knob_validate.py  lateslope.py  make_demos_template.py  masking_abx.py  meas_suite.py  measure.py  measure_proto.py  muffle_diag.py  n64_autofit.py  n64_autofit2.py  n64_demos.py  (+40 more)
spring_dev/: .gitignore  OPTIMIZER_README.md  README.md  analyze.py  best_theta.json  bloom.py  bloomfit.py  cmp2.py  cmp3.py  deconv_ir.py  engine.py  fdn_proto.cpp  fingerprint.py  loss.py  make_fig.py  optimize.py  profile.cpp  render_demo.py  target.py  wavio.h
src/: CalNorm.h  FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetFile.h  PresetManager.h
src/rig/: AmpBlock.h  Biquad.h  Blocks.h  CabBlock.h  CompBlock.h  DelayBlock.h  DriveBlock.h  EarlyConvolver.h  EqBlock.h  GateBlock.h  IrAnalysis.h  IrConvolver.h  LevelLock.h  Lfo.h  ModBlock.h  PhaseAlign.h  ReverbBlock.h  RigChain.h  Saturation.h
src/ui/: BlockStrip.h  CompCurve.h  CompMeter.h  GrMeter.h  HeaderPanel.h  IrBrowser.h  IrTagCache.h  Meter.h  ModFxIcon.h  Panels.h  PresetBar.h  ReverbIcon.h  RigLookAndFeel.h
testdata/: no_meta.nam  with_meta.nam
tests/: cal_test.cpp  comp_test.cpp  delay_test.cpp  drive_test.cpp  dualrig_test.cpp  eq_test.cpp  gate_test.cpp  mod_test.cpp  preset_test.cpp  reverb_test.cpp  rig_chain_process.cpp
